--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "dayjs": "^1.11.10",
         "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
